<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".getting_started_b"
    android:background="@color/main_blue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratblack"
            android:text="@string/getting_started_b_question"
            android:textSize="70sp"
            android:textAlignment="textEnd"
            android:breakStrategy="simple"
            android:textColor="@color/black"
            android:layout_marginEnd="21dp"
            android:layout_marginTop="21dp"
            android:id="@+id/first_name_or_nickname_question_gs_b_tv"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="50dp"
            app:cardElevation="25dp"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            app:strokeWidth="5dp"
            app:strokeColor="@color/black"
            android:layout_below="@+id/first_name_or_nickname_question_gs_b_tv"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:id="@+id/first_name_or_nickname_question_gs_b_card">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_question_edt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratblack"
                    android:hint="@string/first_name_or_nick_name"
                    android:textColor="@color/main_blue"
                    android:textSize="20dp"/>
            </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratblack"
                android:text="@string/select_language"
                android:textSize="50sp"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:id="@+id/select_language_gs_b_tv"
                android:layout_below="@+id/first_name_or_nickname_question_gs_b_card"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="150sp"
                android:layout_below="@+id/select_language_gs_b_tv"
                android:id="@+id/language_carousel_gs_b"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:layout_marginTop="5dp"
                app:layoutManager="com.google.android.material.carousel.CarouselLayoutManager"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:fontFamily="@font/montserratblack"
                android:textAlignment="textEnd"
                android:layout_marginEnd="21dp"
                android:layout_marginStart="21dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/en_name"
                android:id="@+id/selected_language_gs_b_tv"
                android:layout_below="@+id/language_carousel_gs_b"
                android:visibility="gone"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_gs_b_card_button"
                app:cardBackgroundColor="@color/black"
                app:cardElevation="21dp"
                app:strokeWidth="0dp"
                android:outlineSpotShadowColor="@color/black"
                android:outlineAmbientShadowColor="@color/black"
                app:cardCornerRadius="314dp"
                android:layout_below="@+id/selected_language_gs_b_tv"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="21dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="90dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/arrow_forward_main_blue"/>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</ScrollView>