<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadingMode"
    android:background="@drawable/gradient_background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reading_mode_title_rl"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="21dp">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/reading_mode_icon_transparent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratblack"
                android:textColor="@color/cardview_light_background"
                android:textSize="48sp"
                android:text="@string/reading_mode"
                android:id="@+id/settings_fragment_title_tv"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginEnd="200dp"
                android:layout_marginStart="21dp"
                android:layout_below="@+id/settings_fragment_title_tv"
                app:dividerColor="@color/main_blue"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reading_mode_title_rl"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/montserratblack"
                android:id="@+id/misc_question_reading_mode"
                android:text="@string/what_book_are_you_reading"
                android:maxLines="1"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/main_blue"
                app:cardCornerRadius="42dp"
                android:id="@+id/readingModeAddBookCard"
                android:layout_below="@+id/misc_question_reading_mode"
                app:strokeWidth="0dp"
                android:layout_marginBottom="21dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:outlineAmbientShadowColor="@color/black"
                        android:src="@drawable/mic_black"
                        android:id="@+id/home_add_new_word_card_mic_icon"/>

                    <TextView
                        android:id="@+id/reading_mode_add_new_book_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_toRightOf="@+id/home_add_new_word_card_mic_icon"
                        android:fontFamily="@font/montserratblack"
                        android:text="@string/add_new_book"
                        android:textColor="@color/secondary_blue_gradient"
                        android:textSize="21dp"/>

                    <RelativeLayout
                        android:layout_below="@+id/reading_mode_add_new_book_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/type_book_rl_card_reading_mode"
                        android:visibility="gone">
                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="314dp">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/add_new_book_card_input_text_reading_mode"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="15dp"
                                    android:layout_marginTop="5dp"

                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/montserratblack"
                                    android:hint="@string/type_book_name"
                                    android:textColor="@color/main_blue"
                                    android:textSize="20dp"
                                    android:layout_toStartOf="@+id/add_typed_word_reading_mode"/>
                                <com.google.android.material.card.MaterialCardView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:cardBackgroundColor="@color/black"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    app:cardCornerRadius="50dp"
                                    app:strokeColor="@color/main_blue"
                                    app:cardElevation="@dimen/cardview_compat_inset_shadow"
                                    android:outlineAmbientShadowColor="@color/main_blue"
                                    android:outlineSpotShadowColor="@color/main_blue"
                                    android:id="@+id/add_typed_word_reading_mode">
                                    <RelativeLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content">
                                        <ImageView
                                            android:layout_width="50dp"
                                            android:layout_height="50dp"
                                            android:src="@drawable/library_add_main_blue"
                                            android:layout_margin="10dp"/>
                                    </RelativeLayout>
                                </com.google.android.material.card.MaterialCardView>
                            </RelativeLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </RelativeLayout>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/readingModeBookRV"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/readingModeAddBookCard"
                android:layout_marginTop="21dp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>